# oz

./: .editorconfig  .gitignore  CMakeLists.txt  Dockerfile  DockerfilePytorch  DockerfileWheel  Makefile  README.md  TODO.txt  setup.py  stats.py
cmake/: FindPyTorch.cmake  torch-abi-check.cpp
cmake/setuptools/: __init__.py
deploy/: build.sh  build_sq1.sh  build_sq2.sh  deployment-sq1.yaml  job-sq1.yaml  nfs-pv.yaml
examples/: basic.py  basic_batch_search.py  batch_nn.py  bug.py  game2dot.py  kuhn.py  leduk.py  leduk_oss.py  leduk_oss_profile.py  match.py  oos_ext.py  play_leduk.py  py_sigma.py  resevoir.py  solve_leduk.py
examples/ext/: basic_batch_search.py  batch_seach_basic.py  batch_search_basic.py  batch_search_mcts.py  batch_search_targeted.py  batch_sigma.py  play_goofspiel2.py  py_sigma.py  solve_leduc.py
examples/misc/: run_test.sh  test.py  test_demo.py  test_iters.py  train.py
examples/misc/old/: batch_nn.py  dist.py  dist_fat.py  train.py
examples/py/: leduc_oos.py  leduc_oos_profile.py  leduk_oos_profile.py  match.py  play_leduc.py
experiments/scripts/: run-test-sq1.sh  run-test-sq2.sh
experiments/scripts/storage/: storage.py  test-storage.py  test123.txt
experiments/test/: goof13-nn_oos-oos-10k.sh
experiments/train/: goof13-a-100k.sh  goof13-a-5k.sh  goof13-b-10k.sh  goof6-a-100k.sh  goof6-a-10k.sh  goof6-a-5k.sh  goof6-b-10k.sh  goof6-test-10k.sh  holdem-demo-10k.sh  holdem-demo-50k.sh  holdem-demo2-100k.sh  holdem-test-10k.sh  holdem-test2-10k.sh  leduk-a-100k.sh  leduk-a-10k.sh
experiments/train/old/: goof13-a-10k.sh  holdem-a-100k.sh  leduc-a-5k.sh
lib/ACE_Eval/: ace_eval.cpp
lib/ACE_Eval/include/: ace_eval.h
lib/deuces/deuces/: card.py
oz/: __init__.py  best_response.py  deuces  dist.py  nn.py  oos.py  oss.py  reservoir.py  train.py
oz/csrc/: batch.cpp  batch.h  best_response.cpp  best_response.h  encoder.cpp  encoder.h  flip_guess.h  game.h  hash.h  history.cpp  history.h  kuhn.h  mcts.cpp  mcts.h  mcts_batch.cpp  mcts_batch.h  node.cpp  node.h  oos.cpp  oos.h  oos_base.h  oos_rec.cpp  oos_rec.h  oss.cpp  oss.h  oz.cpp  py_sigma.cpp  py_sigma.h  py_sigma_batch.cpp  py_sigma_batch.h  rock_paper_scissors.h  sigma.cpp  sigma.h  solve_goofspiel2.cpp  solve_leduc.cpp  solve_leduc_mcts.cpp  solve_leduk.cpp  solve_leduk.cpp.bak  solve_leduk_mcts.cpp  solve_liars_dice.cpp  (+7 more)
oz/csrc/encoder/: goofspiel2_encoder.cpp  goofspiel2_encoder.h  holdem_encoder.cpp  holdem_encoder.h  leduc_encoder.cpp  leduc_encoder.h  leduk_encoder.cpp  leduk_encoder.h  liars_dice_encoder.cpp  liars_dice_encoder.h  tic_tac_toe_encoder.cpp  tic_tac_toe_encoder.h  tic_tac_toes_encoder.cpp  tic_tac_toes_encoder.h
oz/csrc/games/: flipguess.cpp  flipguess.h  generic_poker.h  goofspiel2.cpp  goofspiel2.h  holdem.cpp  holdem.h  kuhn.cpp  kuhn.h  leduc.cpp  leduc.h  leduk.cpp  leduk.h  liars_dice.cpp  liars_dice.h  tic_tac_toe.cpp  tic_tac_toe.h  tic_tac_toes.cpp  tic_tac_toes.h
oz/csrc/misc/: FlipGuess.cpp  FlipGuess.h  game.h  oss.cpp  oss.h  tree.h
oz/csrc/tests/: test_best_response.cpp  test_flipguess.cpp  test_goofspiel2.cpp  test_holdem.cpp  test_leduc.cpp  test_leduk.cpp  test_mcts.cpp  test_oos.cpp  test_oss.cpp  test_target.cpp  test_tic_tac_toe.cpp
oz/game/: agent.py  flipguess.py  kuhn.py  leduc.py  leduk.py  leduk.py.bak  match.py
script/: goofspiel_server.py  rename-leduk.sh  server.py  server.sh  test.py  train.py
stats/: Performance_goofspiel.ipynb  Performance_leduk.ipynb
tests/: context.py  test_best_reponse.py  test_ext.py  test_flipguess.py  test_kuhn.py  test_leduc.py  test_leduk.py  test_oos.py  test_oss.py
tests/storage/: storage.py  test-storage.py
tools/: game2dot.py  game2dot.sh
